<resources>
    <string name="app_name">S190265 Lykkehjulet</string>
    <!-- Strings for name of the pages -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rules_page">Rules</string>
    <string name="game_page">Wheel of fortune</string>

    <!-- Strings for the game itself -->
    <string name="points">Points: %s</string>
    <string name="lives">Lives: %s</string>
    <string name="category">Category: %s</string>
    <string name="guess">Guess</string>
    <string name="guess_a_letter">Guess a letter</string>
    <string name="spin_the_wheel">Spin the wheel</string>
    <string name="set_score">You got the %s points option</string>
    <string name="bankrupt">You landed on bankrupt and thereby loose all your points</string>
    <string name="lost_life">You lost a life, and your turn will be skipped!</string>
    <string name="extra_life">You got an extra life!</string>
    <string name="won_game_text">Congratulations you won the game!</string>
    <string name="play_again">Play again</string>
    <string name="exit">Exit</string>
    <string name="rules">Rules</string>
    <string name="start_game">Start game</string>
    <string name="empty_letter_guess">You need to enter a letter before guessing</string>
    <string name="duplicate_guess">You have already guessed on letter: %s</string>
</resources>