<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.s190265lykkehjulet.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_helpListFragment"
            app:destination="@id/helpListFragment" />
        <action
            android:id="@+id/action_homeFragment_to_gameFragment"
            app:destination="@id/gameFragment" />
    </fragment>
    <fragment
        android:id="@+id/helpListFragment"
        android:name="com.example.s190265lykkehjulet.HelpListFragment"
        android:label="@string/rules_page"
        tools:layout="@layout/fragment_help_list" />
    <fragment
        android:id="@+id/gameFragment"
        android:name="com.example.s190265lykkehjulet.GameFragment"
        android:label="@string/game_page"
        tools:layout="@layout/fragment_game">
        <action
            android:id="@+id/action_gameFragment_to_winGameFragment"
            app:destination="@id/winGameFragment" />
        <action
            android:id="@+id/action_gameFragment_to_loseGameFragment"
            app:destination="@id/loseGameFragment" />
    </fragment>
    <fragment
        android:id="@+id/winGameFragment"
        android:name="com.example.s190265lykkehjulet.WinGameFragment"
        android:label="@string/game_page"
        tools:layout="@layout/fragment_win_game">
        <action
            android:id="@+id/action_winGameFragment_to_gameFragment2"
            app:destination="@id/gameFragment" />
        <argument
            android:name="score"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/loseGameFragment"
        android:name="com.example.s190265lykkehjulet.LoseGameFragment"
        android:label="@string/game_page">
        <action
            android:id="@+id/action_loseGameFragment_to_gameFragment"
            app:destination="@id/gameFragment" />
    </fragment>
</navigation>