<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".GameFragment">


    <TextView
        android:id="@+id/point_text"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/points"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Points: 0"/>

    <TextView
        android:id="@+id/lives_text"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/lives"
        android:layout_marginStart="120dp"
        app:layout_constraintStart_toEndOf="@id/point_text"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Lives: 5"/>

    <TextView
        android:id="@+id/category_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/point_text"
        app:layout_constraintTop_toBottomOf="@id/point_text"
        tools:text="Category"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layout_border"
        app:layout_constraintStart_toStartOf="@id/category_text"
        app:layout_constraintTop_toBottomOf="@id/category_text">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            android:text="Test"/>
    </LinearLayout>

    <Button
        android:id="@+id/test_btn"
        android:text="Test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/layout_border"
        app:layout_constraintTop_toBottomOf="@id/layout_border"/>


</androidx.constraintlayout.widget.ConstraintLayout>